# ml-disease-symptom

./: .gitignore  MLproject  README.md  conda.yaml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
config/: parameters.yml  schema.yml
deployment/: README.md  app.py  dockerfile  requirements.txt  utils.py
monitor/: app.py  disease.csv  utils.py
notebooks/: notebook.ipynb
pipelines/: experiment_pipeline.py  training_pipeline.py
src/ml_disease_symptom/: __init__.py  __main__.py  settings.py  utility.py
src/ml_disease_symptom/pipelines/data_preprocessing/: nodes.py  pipeline.py
src/ml_disease_symptom/pipelines/data_science/: nodes.py  pipeline.py
src/ml_disease_symptom/steps/: data_loader.py  data_transformation.py  data_validator.py  experiment_mlflow.py  model_trainer.py
